[NEW] `Admin::ResourcesController` includes `Typus::Extensions` if available.

[CHANGED] Removed `remove_filter_link` helper in favour of predefined links to
filters.

[NEW] Custom actions can be injected into table actions. This needs some
refector to be more powerful (roles) but it works for now.

[CHANGED] `current_user` is now `admin_user`.

[CHANGED] All available locales are shown to the user.

[CHANGED] All the I18n stuff of `typus` is now under Typus::I18n namespace.

[CHANGED] `/admin/help` is now `/admin/user_guide`.

[NEW] Link to `/admin/user_guide` from the sidebar.

[3.0.2]

[FIXED] Use Arel to get the data on lists. After moving to will_paginate I
broke the data method, on each list we where "selecting ALL on the table of
the current model" (Really ugly bug) [Reported by NateW]

[FIXED] If @current_user was being set many times on each request, thanks to
rails caching mechanism this was not affecting to the performance. Now we only
see the @current_user once. (As it should be.)

[3.0.1]

[FIXED] After moving from a vendored paginator to will_paginate I removed some
stuff which shouldn't be removed, so the 3.0.0 gem is totally broken.

[FIXED] Force query with postgresql adapter to not be case sensitive [jmeiss]

[3.0.0]

[NEW] New gem version compatible with Rails 3.

[Previously]

Why a 3.0.0 version? After considering the work done for the Rails 3 transition
I though it would be a good idea to keep versions syncronized with Rails.

Typus will have the same version numbers as Rails as I considered it's pretty
tied to it. With each release of Rails, we will take the latest features into
Typus.

Pending stuff that someday will be done, donations and collaborations are
accepted.

* Add AJAX, specially when removing and adding new relationships.

* Transversal search and full models search.

* Test the helpers and add some functional testing.

* Nested models.

* Contextual content depending on the role logged.

* Replace typus authentication by devise.