@@ -14,4 +14,4 @@ ca:
         password_confirmation: "Confirmar contrasenya"
         status: "Estat"
         role: "Rol"
-        language: "Idioma"
+        locale: "Idioma"
