@@ -14,4 +14,4 @@ de:
         password_confirmation: "Passwort Best&auml;tigung"
         status:
         role:
-        language:
+        locale:
