@@ -15,4 +15,4 @@ fr:
         password_confirmation: "Confirmation du mot de passe"
         status: "État"
         role: "Rôle"
-        language:
+        locale:
