@@ -1,7 +1,7 @@
-# <language> translations for Typus
+# <locale> translations for Typus
 # - <your_name> <contact_form>
 
-<language>:
+<locale>:
 
   "Actions":
   "Active":
