@@ -4,11 +4,11 @@
 
 <%= options[:user_class_name] %>:
   fields:
-    default: first_name, last_name, role, email, language
+    default: first_name, last_name, role, email, locale
     list: email, role, status
-    form: first_name, last_name, role, email, password, password_confirmation, language
+    form: first_name, last_name, role, email, password, password_confirmation, locale
     options:
-      selectors: role, language
+      selectors: role, locale
       booleans:
         status: Active, Inactive
   filters: status, role
