@@ -46,7 +46,7 @@ Examples:
           <<-MSG
 
   ROLE = Typus::Configuration.roles.keys.sort
-  LANGUAGE = Typus.locales
+  LOCALE = Typus.locales
 
   enable_as_typus_user
 
