@@ -1,7 +1,7 @@
 class TypusUser < ActiveRecord::Base
 
   ROLE = Typus::Configuration.roles.keys.sort
-  LANGUAGE = Typus.locales
+  LOCALE = Typus.locales
 
   enable_as_typus_user
 
